@@ -1,0 +1,6 @@
+<html>
+<body>
+<input type=submit><br>
+<input type=reset><br>
+</body>
+</html>
